--- a/style1.css
+++ b/style1.css
@@ -15,6 +15,11 @@
 body{
   background-color: black;
 }
+#responsive{
+      width: 80%;
+  max-width: 1000px;
+  min-width: 700px;
+}
   #ban
   {
       
