--- a/galery.css
+++ b/galery.css
@@ -1,4 +1,24 @@
+div.gallery {
+    margin: 20px;
+  float: left;
+  width: 380px;
+}
+
+    div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desk {
+    margin-left: 50px;
+    color:whitesmoke;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 6px;
+    text-align: center;
+    }
 img { 
+  margin-left: 130px;
+  margin-right: 190px;
   border-radius: 6px;
   opacity: 0.3;
   -webkit-transition: all 1s ease; /* Safari et Chrome */
@@ -17,20 +37,3 @@ img:hover {
   -o-transform:scale(1.25); /* Opera */
   transform:scale(1.25);
 }
-div.gallery {
-    margin: 20px;
-  float: left;
-  width: 380px;
-}
-
-    div.gallery img {
-    width: 100%;
-    height: auto;
-  }
-  
-  div.desk {
-    color:whitesmoke;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 6px;
-    text-align: center;
-    }
