--- a/style1.css
+++ b/style1.css
@@ -131,6 +131,13 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
+#h1{
+    margin-left: 150px;
+    margin-right: 190px;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 35px;
+}
 div.taille {
     float: left;
     margin-left: 150px;
