--- a/style1.css
+++ b/style1.css
@@ -115,13 +115,17 @@ body{
     padding: 5px 0px 5px 0;
     margin: 0 20px;
   }
-  h1, p {
-    margin: 30px 0;
-    font-size: 45px;
-    font-weight: 280;
+  h1{
+    margin-left: 150px;
+    margin-right: 190px;
+    font-size: 35px;
+    color: white;
   }
   p {
-    font-size: 30px;
+    margin-left: 150px;
+    margin-right: 190px;
+    font-size: 20px;
+    color:white;
   }
   #text 
 {
@@ -130,13 +134,6 @@ body{
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
-}
-#h1{
-    margin-left: 150px;
-    margin-right: 190px;
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 35px;
 }
 div.taille {
     float: left;
