--- a/style1.css
+++ b/style1.css
@@ -88,7 +88,7 @@ body{
     transform: translate3d(-280px, 0px, 0px);
     position: absolute;
     width: 280px;
-    background: #fff;
+    background: black;
     color: #eee;
     left: 0;
     height: 100%;
