--- a/style.css
+++ b/style.css
@@ -1,40 +1,29 @@
 html, body {
-    background-color: black;
+    background-color: #101010;
     height: 80%;
     margin-right: 0.30%;
     margin-left: 0.30%;
 }
-.zoom {
-    -webkit-transition: all 0.3s ease; 
-    -moz-transition: all 0.3s ease; 
-    -ms-transition: all 0.3s ease; 
-    -o-transition: all 0.3s ease; 
-    transition: all 0.3s ease;
-    }
-.zoom:hover{
-    -webkit-transform:scale(110%); 
-    -moz-transform:scale(110%); 
-    -ms-transform:scale(110%); 
-    -o-transform:scale(110%); 
-    transform:scale(110%);
-    }
-.ban {
+h3{
     text-align: center;
+    font-size: 186%;
+    color:#e2cd32;
+}
+h3:hover{
     color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 136%;
-
+    -webkit-transition: all 0.2s ease; 
+    -moz-transition: all 0.2s ease; 
+    -ms-transition: all 0.2s ease; 
+    -o-transition: all 0.2s ease; 
+    transition: all 0.2s ease;
 }
-.container1, .container2, .container3, .container4{
-    background-color:transparent;
-}
-.container1 {
-    
-}
-h1{
+a{
     color: white;
-    font-size: 156%;
-    margin-left: 1.6%;
+    text-decoration: none;
+}
+a:hover{
+    color: #f03838;
+    text-decoration: underline;
 }
 h2{
     color:#fff;
@@ -45,7 +34,7 @@ font-size: 106%;
 }
 p{
     color: white;
-    font-size: 126%;
+    font-size: 136%;
     margin-left: 4.6%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -61,6 +50,64 @@ em{
 em:hover{
     font-style: normal;
 }
+.bg {
+  background-image: url("https://i.imgur.com/iI0Gl31.jpg");
+  height: 35%; 
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.bg:hover{
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+  background-image: url("https://i.imgur.com/iI0Gl31.jpg");
+  height: 70%;
+  -webkit-transition: all 0.5s ease; 
+    -moz-transition: all 0.5s ease; 
+    -ms-transition: all 0.5s ease; 
+    -o-transition: all 0.5s ease; 
+    transition: all 0.5s ease; 
+}
+.zoom {
+
+    -webkit-transition: all 0.5s ease; 
+    -moz-transition: all 0.5s ease; 
+    -ms-transition: all 0.5s ease; 
+    -o-transition: all 0.5s ease; 
+    transition: all 0.5s ease;
+    }
+.zoom:hover{
+
+    -webkit-transform:scale(95%); 
+    -moz-transform:scale(95%); 
+    -ms-transform:scale(95%); 
+    -o-transform:scale(95%); 
+    transform:scale(95%);
+    }
+.ban {
+    color: black;
+    font-size: 186%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    position: absolute;
+    top: 12%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+.container1, .container2, .container3, .container4{
+    background-color:transparent;
+}
+.container1:hover, .container2:hover, .container3:hover, .container4:hover{
+        -webkit-transition: all 0.5s ease; 
+    -moz-transition: all 0.5s ease; 
+    -ms-transition: all 0.5s ease; 
+    -o-transition: all 0.5s ease; 
+    transition: all 0.5s ease;
+}
+
 .endpage {
     height: 20%;
 }
